[package]
name = "omena-tsgo-client"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "Rust tsgo client boundary for Omena source-side type facts"
repository = "https://github.com/omenien/omena-tsgo-client"
readme = "README.md"
keywords = ["omena", "css-modules", "typescript", "tsgo"]
categories = ["development-tools"]
exclude = [".github/**"]

[lib]
name = "omena_tsgo_client"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
